Bug 1062697 - Initialize avrcp play status using the proper value, disable AvRCP 1.5. r=btian